Improved failure handler when creating index with Elasticsearch sender.